Organizado todos os arquivos em pastas

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="30">
-    <link rel='stylesheet' href='main.css'>
-    <title>Perído do Dia</title>
+    <link rel='stylesheet' href='css/main.css'>
+    <title>Screst</title>
 </head>
 <body id='body' onload='carregar()'>
     <header>
-        <h1 id='tit'>Período do dia</h1>
+        <h1 id='tit'>Screst</h1>
     </header>
     
     <section>
@@ -18,13 +18,13 @@
         </div>
 
         <div id='foto'>
-            <img id=img src='imagem.png' width='50%'>
+            <img id='img' src='img/imagem.png' width='50%'>
         </div>
     </section>
 
 </body>
 </html>
-<script src='main.js'></script>
+<script src='js/main.js'></script>
 
 <!-- Criado por Leonardo Vasconcelos Paulino -->
 <!-- github: https://github.com/leovasc5 || instagram: @leovasc5 -->
