Atualizado sistema de horário. Incluído icone do site. Começarei a planejar a incluir a API do climatempo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="30">
     <link rel='stylesheet' href='css/main.css'>
+    <script src='js/main.js'></script>
+    <link href="img/time.ico" type="image/x-icon" rel="icon"/>
     <title>Screst</title>
 </head>
 <body id='body' onload='carregar()'>
@@ -13,9 +15,9 @@
     </header>
     
     <section>
-        <div id='msg'>
-            Teste
-        </div>
+        <h3><div id='msg'>
+            Error: Comunique o desenvolvedor!
+        </div></h3>
 
         <div id='foto'>
             <img id='img' src='img/imagem.png' width='50%'>
@@ -24,7 +26,6 @@
 
 </body>
 </html>
-<script src='js/main.js'></script>
 
 <!-- Criado por Leonardo Vasconcelos Paulino -->
 <!-- github: https://github.com/leovasc5 || instagram: @leovasc5 -->
