Criado cadastro e recebido o token da API de clima. -> Estudando o objeto enviado por JSON

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div></h3>
 
         <div id='foto'>
-            <img id='img' src='img/imagem.png' width='50%'>
+            <img id='img' width='50%'>
         </div>
     </section>
 
